src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import url('https://fonts.googleapis.com/css?family=Nunito:400,700&display=swap');
@import "~@angular/material/prebuilt-themes/purple-green.css";


$top_bar: #26064A;
$bot_bar: #000000;
$card: #212121;
$background: #666666;

h1 {
    margin-top: 2em;
}

.button {
    background-color: #4CAF50; /* Green */
    border: none;
    padding: 1em;
    text-align: center;
    display: inline-block;
    font-size: 16px;
    
}
.button:hover {
    background-color: #3e8e41
}
.button:active {
    background-color: #3e8e41;
    
    transform: translateY(4px);
}


html, body { height: 100%; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }


// div.container {
 //   margin: 0px 40px;
// }

.fill-remaining-space {
    flex: 1 1 auto;
}

form.normal-form {
    margin: 10px;
}
.contols-container {
    width: 100%;
    padding: 5%;
}

.contols-container > * {
    width: 100%;
}
.add-bottom-padding {
    padding-bottom: 10px;
}

mat-radio-group mat-radio-button {
    margin-left: 5px;
}

.button-row button {
    margin: 5px;
}

snack-bar-container.success {
    background-color: rgb(184, 216, 184);
    color: white;
}

snack-bar-container.notification simple-snack-bar {
    font-size: 18px !important;
    font-weight: bold;
}

.hide {
    display: none;
}

mat-footer-row  mat-footer-cell{
    justify-content: center;
    font-style: italic;
}

/* filter controls */
.search-div{
    margin: 10px;
}
.search-form-field{
    width: 60%;
    margin-left: 10px;
    padding: 5px 10px;
    background-color: #f5f5f5;
    border-radius: 5px;
}
.search-form-field div.mat-form-field-underline {
    display: none;
}
.search-form-field div.mat-form-field-infix{
    border-top: 0px;
}
.search-form-field div.mat-form-field-wrapper{
    padding-bottom: 0px;
}
.search-form-field div.mat-form-field-suffix button{
    height: 32px;
    width: 32px;
}
.mat-toolbar.mat-primary{
    background-color: $top_bar;
}
.second-mat-toolbar{
    margin: 15px 0px;
    background-color: $bot_bar;
}

.myTitle{
    display: flex;
    align-items: center;
    justify-content: space-between;
    width: 100% !important;
}
.fill {
    flex: 1;
  }

//   .mat-card-header-text{
//     width: 100% !important;
//   }

.mat-card{
    background-color: $card;
}

.screenContent{
    margin: 0px 40px;
}

body{
    background-color: $background;
}

.mat-dialog-container {
    background: $card;
}

.mat-table {
    background: $card;
}
.mat-paginator {
    background: $card;
}
.stat-box{
    display: flex;
    // margin-right: ;
}

.mat-column-date, .mat-column-lines, .mat-column-chars, .mat-column-mins, .mat-column-pace{
    font-size: 20px;
    text-align:  right;
}

.cardLayout{
    align-items: stretch;
}

